pxc/tests/test_07_constr/strarg.px
namespace strarg;
import test_common "";

struct foo(int i) {
  function int m1() {
    return i; // error
  }
}


function void t1()
{
  foo f = foo(5);
}

